# seg-fund-manual-scraper

./: .gitignore  README.md  pyproject.toml
src/ia_funds/: __init__.py  _seg_fund_page_style.htmlfrag  _seg_fund_table_sort.js.txt  catalog.py  cli.py  excel_export.py  loader.py  logutil.py  metastock.py  report_email.py  scraper.py  seg_fund_chart_embed.py  seg_fund_email_html.py
tests/: test_catalog.py  test_loader.py  test_metastock.py  test_scraper_history.py  test_scraper_product_filter.py  test_seg_fund_email_html.py
tests/fixtures/: tiny_wide.csv
